# Multilingual_AI_Voice-Assistant

./: README.md  app.py  pyproject.toml  requirements.txt  template.py
multilingual_ai_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt
src/: helper.py
src/multilingual_ai_voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
